--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "vue-serve": "vue-cli-service serve",
+    "vue-build": "vue-cli-service build",
+    "vue-lint": "vue-cli-service lint",
+    "nuxt-dev": "nuxt",
+    "nuxt-build": "nuxt build",
+    "nuxt-generate": "nuxt generate",
+    "nuxt-start": "nuxt start"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "nuxt": "^2.15.8",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -18,7 +23,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "@nuxt/cli": "^2.15.8"
   },
   "eslintConfig": {
     "root": true,
